Bug 867596 - Stop calling nsSVGUtils::InvalidateBounds in nsSVGTextFrame2, and use DLBI instead. r=longsonr